# qof

./: TODO  configure.ac  meson.build  qof.pc.in
backend/: Makefile.am  meson.build
backend/file/: meson.build
backend/sqlite/: meson.build  qof-sqlite.h
examples/: Makefile.am
examples/backend/: Makefile.am
examples/gobject/: Makefile.am
lib/: Makefile.am  README  meson.build
lib/libsql/: Makefile.am  lexer.l  meson.build  sql_parser.c
po/: POTFILES.skip  cs.po  de.po  fr.po  id.po  it.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  vi.po  zh_CN.po
qof/: Makefile.am  meson.build  qof.h  qoflog.c  qofsession.c  qofsql-p.h  qofsql.c  qofsql.h
qof/test/: Makefile.am
